[package]
name = "test-alloy-mev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
alloy-mev = "0.2.0"
alloy = { version = "0.2.0", features = [
    "rpc",
    "rpc-client",
    "rpc-types-mev",
    "json-rpc",
    "network",
    "providers",
    "transports",
    "transport-http",
    "signers",
    "consensus",
    "signer-local",
] }
hyper = { version = "1.1", features = ["client"], optional = true }
tower = "0.4"
futures = "0.3"
pin-project = "1.1.5"
reqwest = { version = "0.12", optional = true }
url = "2.5"
serde_json = "1.0"
async-trait = "0.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
